--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@babel/core": "^7.13.10",
     "@babel/node": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
-    "nodemon": "^2.0.7"
+    "@prettier/plugin-pug": "^2.4.2",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.8.7"
   }
 }
